# cassava-streams

./: .gitignore  CHANGELOG  CHANGES.md  GNUmakefile  LICENSE  README.md  cassava-streams.cabal  cassava-streams.nix  default.nix  stack.yaml
.github/workflows/: tests.yml
data/: HLint.hs
src/System/IO/Streams/: Csv.hs
src/System/IO/Streams/Csv/: Decode.hs  Encode.hs  Tutorial.hs
test/: header.csv  make-huge-csv.sh  simple.csv  test.hs
