--------------------------------------------------------------------------------
name:          cassava-streams
version:       0.1.0.0
synopsis:      io-streams interface for the cassava CSV library.
license:       BSD3
license-file:  LICENSE
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright (c) 2014 Peter Jones
category:      Data, Text, CSV, IO-Streams
build-type:    Simple
cabal-version: >=1.10
tested-with:   GHC==7.8.2
homepage:      https://github.com/pjones/cassava-streams
bug-reports:   https://github.com/pjones/cassava-streams/issues
description:
  The cassava-streams library glues togeter the cassava CSV library
  and the io-streams streaming library.
  .
  See the "System.IO.Streams.Csv.Tutorial" module for a simple tutorial.

--------------------------------------------------------------------------------
extra-source-files:
  README.md
  CHANGELOG

--------------------------------------------------------------------------------
source-repository head
  type:     git
  location: https://github.com/pjones/cassava-streams.git

--------------------------------------------------------------------------------
flag maintainer
  description: Enable settings for the package maintainer.
  default: False

--------------------------------------------------------------------------------
library
  exposed-modules:
    System.IO.Streams.Csv
    System.IO.Streams.Csv.Tutorial
  other-modules:
    System.IO.Streams.Csv.Encode
    System.IO.Streams.Csv.Decode

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -O2 -Wall -fwarn-incomplete-uni-patterns
  ghc-prof-options: -prof -auto-all

  if flag(maintainer)
    ghc-options: -Werror

  build-depends: base       >= 4.6   && < 5.0
               , bytestring >= 0.10  && < 1.0
               , cassava    >= 0.3   && < 0.4
               , io-streams >= 1.1.0 && < 2.0
               , vector     >= 0.10  && < 1.0
